--- a/CHANGES
+++ b/CHANGES
@@ -38,17 +38,17 @@ Version 1.5.8
 
 Version 1.5.7
 (06 Aug 2009, from /branches/1.5.x)
-http://svn.collab.net/repos/svn/tags/1.5.7
+http://svn.apache.org/repos/asf/subversion/tags/1.5.7
 
  User-visible changes:
   * fixed: heap overflow vulnerability on server and client
            See CVE-2009-2411, and descriptive advisory at
-           http://subversion.tigris.org/security/CVE-2009-2411-advisory.txt
+           http://subversion.apache.org/security/CVE-2009-2411-advisory.txt
 
 
 Version 1.5.6
-(27 Feb 2009, from /branches/1.5.x)
-http://svn.collab.net/repos/svn/tags/1.5.6
+(26 Feb 2009, from /branches/1.5.x)
+http://svn.apache.org/repos/asf/subversion/tags/1.5.6
 
  User-visible changes:
   * allow colons within mergeinfo path names (r35040)
@@ -70,7 +70,7 @@ http://svn.collab.net/repos/svn/tags/1.5.6
 
 Version 1.5.5
 (22 Dec 2008, from /branches/1.5.x)
-http://svn.collab.net/repos/svn/tags/1.5.5
+http://svn.apache.org/repos/asf/subversion/tags/1.5.5
 
  User-visible changes:
   * allow prop commits on dirs with modified children (r34487, -92, -94)
@@ -98,7 +98,7 @@ http://svn.collab.net/repos/svn/tags/1.5.5
 
 Version 1.5.4
 (24 Oct 2008, from /branches/1.5.x)
-http://svn.collab.net/repos/svn/tags/1.5.4
+http://svn.apache.org/repos/asf/subversion/tags/1.5.4
 
  User-visible changes:
   * Properly handle explicit mergeinfo added in merge source (r32968, -75)
@@ -108,7 +108,7 @@ http://svn.collab.net/repos/svn/tags/1.5.4
 
 Version 1.5.3
 (10 Oct 2008, from /branches/1.5.x)
-http://svn.collab.net/repos/svn/tags/1.5.3
+http://svn.apache.org/repos/asf/subversion/tags/1.5.3
 
  User-visible changes:
   * Allow switch to continue after deleting locally modified dirs (issue #2505)
@@ -135,7 +135,7 @@ http://svn.collab.net/repos/svn/tags/1.5.3
 
 Version 1.5.2
 (30 Aug 2008, from /branches/1.5.x)
-http://svn.collab.net/repos/svn/tags/1.5.2
+http://svn.apache.org/repos/asf/subversion/tags/1.5.2
 
  User-visible changes:
   * Set correct permissions on created fsfs shards (r32355, -7)
@@ -160,13 +160,13 @@ http://svn.collab.net/repos/svn/tags/1.5.2
 
  Developer-visible changes:
   * make libsvn_ra_neon initialization thread-safe (r32497, r32510)
-  * respect LDFLAGS in Swig bindings (r32416, r32421, r32442)
+  * respect LDFLAGS in SWIG bindings (r32416, r32421, r32442)
   * fixed: test failures in non-English locales (r32491)
 
 
 Version 1.5.1
 (26 Jul 2008, from /branches/1.5.x)
-http://svn.collab.net/repos/svn/tags/1.5.1
+http://svn.apache.org/repos/asf/subversion/tags/1.5.1
 
  User-visible changes:
   * mergeinfo on switched subtrees should elide in repos (issue #3188)
@@ -211,7 +211,7 @@ http://svn.collab.net/repos/svn/tags/1.5.1
 
 Version 1.5.0
 (19 Jun 2008, from /branches/1.5.x)
-http://svn.collab.net/repos/svn/tags/1.5.0
+http://svn.apache.org/repos/asf/subversion/tags/1.5.0
 
  User-visible changes:
   - Major new features:
@@ -429,7 +429,7 @@ http://svn.collab.net/repos/svn/tags/1.5.0
 
 Version 1.4.6
 (21 Dec 2007, from /branches/1.4.x)
-http://svn.collab.net/repos/svn/tags/1.4.6
+http://svn.apache.org/repos/asf/subversion/tags/1.4.6
 
  User-visible changes:
   - Client:
@@ -471,17 +471,17 @@ http://svn.collab.net/repos/svn/tags/1.4.6
 
 Version 1.4.5
 (27 Aug 2007, from /branches/1.4.5)
-http://svn.collab.net/repos/svn/tags/1.4.5
+http://svn.apache.org/repos/asf/subversion/tags/1.4.5
 
  User-visible changes:
  * fixed: file placement vulnerability (Win32 clients only)
           See CVE-2007-3846, and descriptive advisory at
-          http://subversion.tigris.org/security/CVE-2007-3846-advisory.txt
+          http://subversion.apache.org/security/CVE-2007-3846-advisory.txt
 
 
 Version 1.4.4
 (30 May 2007, from /branches/1.4.x)
-http://svn.collab.net/repos/svn/tags/1.4.4
+http://svn.apache.org/repos/asf/subversion/tags/1.4.4
 
  User-visible changes:
   - Client:
@@ -525,7 +525,7 @@ http://svn.collab.net/repos/svn/tags/1.4.4
 
 Version 1.4.3
 (18 January 2007, from /branches/1.4.x)
-http://svn.collab.net/repos/svn/tags/1.4.3
+http://svn.apache.org/repos/asf/subversion/tags/1.4.3
 
  User-visible changes:
   - Client:
@@ -562,7 +562,7 @@ http://svn.collab.net/repos/svn/tags/1.4.3
 
 Version 1.4.2
 (2 November 2006, from /branches/1.4.x)
-http://svn.collab.net/repos/svn/tags/1.4.2
+http://svn.apache.org/repos/asf/subversion/tags/1.4.2
 
  User-visible changes:
   - Client:
@@ -618,7 +618,7 @@ Version 1.4.1
 
 Version 1.4.0
 (10 September 2006, from /branches/1.4.x)
-http://svn.collab.net/repos/svn/tags/1.4.0
+http://svn.apache.org/repos/asf/subversion/tags/1.4.0
 
  User-visible changes:
   - Client:
@@ -789,7 +789,7 @@ http://svn.collab.net/repos/svn/tags/1.4.0
 
 Version 1.3.2
 (23 May 2006, from /branches/1.3.x)
-http://svn.collab.net/repos/svn/tags/1.3.2
+http://svn.apache.org/repos/asf/subversion/tags/1.3.2
 
  User-visible changes:
   - Client:
@@ -821,7 +821,7 @@ http://svn.collab.net/repos/svn/tags/1.3.2
 
 Version 1.3.1
 (25 March 2006, from /branches/1.3.x)
-http://svn.collab.net/repos/svn/tags/1.3.1
+http://svn.apache.org/repos/asf/subversion/tags/1.3.1
 
  User-visible changes:
   - Client:
@@ -872,7 +872,7 @@ http://svn.collab.net/repos/svn/tags/1.3.1
 
 Version 1.3.0
 (30 December 2005, from /branches/1.3.x)
-http://svn.collab.net/repos/svn/tags/1.3.0
+http://svn.apache.org/repos/asf/subversion/tags/1.3.0
 
  User-visible changes:
   - Client:
@@ -973,7 +973,7 @@ http://svn.collab.net/repos/svn/tags/1.3.0
 
 Version 1.2.3
 (19 August 2005, from /branches/1.2.x)
-http://svn.collab.net/repos/svn/tags/1.2.3
+http://svn.apache.org/repos/asf/subversion/tags/1.2.3
 
  User-visible changes:
   - Client:
@@ -1019,7 +1019,7 @@ Version 1.2.2
 
 Version 1.2.1
 (5 July 2005, from /branches/1.2.x)
-http://svn.collab.net/repos/svn/tags/1.2.1
+http://svn.apache.org/repos/asf/subversion/tags/1.2.1
 
  User-visible changes:
   - Client:
@@ -1052,10 +1052,10 @@ http://svn.collab.net/repos/svn/tags/1.2.1
 
 Version 1.2.0
 (21 May 2005, from /branches/1.2.x)
-http://svn.collab.net/repos/svn/tags/1.2.0
+http://svn.apache.org/repos/asf/subversion/tags/1.2.0
 
 See the 1.2 release notes for a more verbose overview of the changes since
-the 1.1 release:  http://subversion.tigris.org/svn_1.2_releasenotes.html
+the 1.1 release:  http://subversion.apache.org/docs/release-notes/1.2.html
 
  User-visible changes:
   - Client:
@@ -1201,7 +1201,7 @@ the 1.1 release:  http://subversion.tigris.org/svn_1.2_releasenotes.html
 
 Version 1.1.4
 (1 April 2005, from /branches/1.1.x)
-http://svn.collab.net/repos/svn/tags/1.1.4
+http://svn.apache.org/repos/asf/subversion/tags/1.1.4
 
  User-visible changes:
   - Client:
@@ -1235,7 +1235,7 @@ http://svn.collab.net/repos/svn/tags/1.1.4
 
 Version 1.1.3
 (14 January 2005, from /branches/1.1.x)
-http://svn.collab.net/repos/svn/tags/1.1.3
+http://svn.apache.org/repos/asf/subversion/tags/1.1.3
 
  User-visible changes:
   - Client:
@@ -1247,7 +1247,7 @@ http://svn.collab.net/repos/svn/tags/1.1.3
  
 Version 1.1.2
 (20 December 2004, from /branches/1.1.x)
-http://svn.collab.net/repos/svn/tags/1.1.2
+http://svn.apache.org/repos/asf/subversion/tags/1.1.2
 
  User-visible changes:
   - Client:
@@ -1300,7 +1300,7 @@ http://svn.collab.net/repos/svn/tags/1.1.2
 
 Version 1.1.1
 (22 October 2004, from /branches/1.1.x)
-http://svn.collab.net/repos/svn/tags/1.1.1
+http://svn.apache.org/repos/asf/subversion/tags/1.1.1
 
  User-visible changes:
   - Client:
@@ -1335,7 +1335,7 @@ http://svn.collab.net/repos/svn/tags/1.1.1
 
 Version 1.0.9
 (13 October 2004, from /branches/1.0.9)
-http://svn.collab.net/repos/svn/tags/1.0.9
+http://svn.apache.org/repos/asf/subversion/tags/1.0.9
 
  User-visible changes:
   - Server:
@@ -1348,10 +1348,10 @@ http://svn.collab.net/repos/svn/tags/1.0.9
 
 Version 1.1.0
 (29 September 2004, from /branches/1.1.x)
-http://svn.collab.net/repos/svn/tags/1.1.0
+http://svn.apache.org/repos/asf/subversion/tags/1.1.0
 
 See the 1.1 release notes for a more verbose overview of the changes since
-1.0.x: http://subversion.tigris.org/svn_1.1_releasenotes.html
+1.0.x: http://subversion.apache.org/docs/release-notes/1.1.html
 
  User-visible changes:
  * new non-database repository back-end (libsvn_fs_fs)
@@ -1476,17 +1476,17 @@ See the 1.1 release notes for a more verbose overview of the changes since
 
 Version 1.0.8
 (22 September 2004, from /branches/1.0.8)
-http://svn.collab.net/repos/svn/tags/1.0.8
+http://svn.apache.org/repos/asf/subversion/tags/1.0.8
 
  User-visible changes:
  * fixed: mod_authz_svn path and log-message metadata leaks.
           See CAN-2004-0749, and descriptive advisory at 
-          http://subversion.tigris.org/security/CAN-2004-0749-advisory.txt
+          http://subversion.apache.org/security/CAN-2004-0749-advisory.txt
 
 
 Version 1.0.7
 (17 September 2004, from /branches/1.0.x)
-http://svn.collab.net/repos/svn/tags/1.0.7
+http://svn.apache.org/repos/asf/subversion/tags/1.0.7
 
  User-visible changes:
  * fixed: win32 'file not found' error [issue #1862]
@@ -1505,7 +1505,7 @@ http://svn.collab.net/repos/svn/tags/1.0.7
 
 Version 1.0.6
 (19 July 2004, from /branches/1.0.x)
-http://svn.collab.net/repos/svn/tags/1.0.6
+http://svn.apache.org/repos/asf/subversion/tags/1.0.6
 
  User-visible changes:
  * fixed: crash in status command, caused by race (r10144)
@@ -1519,7 +1519,7 @@ http://svn.collab.net/repos/svn/tags/1.0.6
 
 Version 1.0.5
 (10 Jun 2004, from /branches/1.0.5)
-http://svn.collab.net/repos/svn/tags/1.0.5
+http://svn.apache.org/repos/asf/subversion/tags/1.0.5
 
  User-visible changes:
  * fixed: security bug in svn protocol string parsing. (CAN-2004-0413)
@@ -1527,7 +1527,7 @@ http://svn.collab.net/repos/svn/tags/1.0.5
 
 Version 1.0.4
 (21 May 2004, from /branches/1.0.x)
-http://svn.collab.net/repos/svn/tags/1.0.4
+http://svn.apache.org/repos/asf/subversion/tags/1.0.4
 
  User-visible changes:
  * fixed: 'svn up' can delete unversioned data on win32 fs (issue #1854)
@@ -1546,7 +1546,7 @@ http://svn.collab.net/repos/svn/tags/1.0.4
 
 Version 1.0.3
 (19 May 2004, from /branches/1.0.3)
-http://svn.collab.net/repos/svn/tags/1.0.3
+http://svn.apache.org/repos/asf/subversion/tags/1.0.3
 
  User-visible changes:
  * fixed: security bug in date parsing. (CAN-2004-0397)
@@ -1554,7 +1554,7 @@ http://svn.collab.net/repos/svn/tags/1.0.3
 
 Version 1.0.2
 (15 April 2004, from /branches/1.0.x)
-http://svn.collab.net/repos/svn/tags/1.0.2
+http://svn.apache.org/repos/asf/subversion/tags/1.0.2
 
  User-visible changes:
  * fixed: segfault when remotely deleting svn:author property.
@@ -1579,7 +1579,7 @@ http://svn.collab.net/repos/svn/tags/1.0.2
 
 Version 1.0.1
 (12 March 2004, from /branches/1.0.x)
-http://svn.collab.net/repos/svn/tags/1.0.1
+http://svn.apache.org/repos/asf/subversion/tags/1.0.1
 
  User-visible changes:
  * allow anonymous access checking in mod_authz_svn
@@ -1625,7 +1625,7 @@ http://svn.collab.net/repos/svn/tags/1.0.1
 
 Version 1.0.0
 (branching 23 February 2004, from /branches/1.0.x)
-http://svn.collab.net/repos/svn/tags/1.0.0
+http://svn.apache.org/repos/asf/subversion/tags/1.0.0
 
  User-visible changes:
  * fixes to the shbang lines in tools/hook-scripts/.
@@ -1649,7 +1649,7 @@ http://svn.collab.net/repos/svn/tags/1.0.0
 
 Version 0.37.0 [Beta Interim 2]
 (branching 24 January 2004, from /branches/1.0-stabilization)
-http://svn.collab.net/repos/svn/tags/0.37.0
+http://svn.apache.org/repos/asf/subversion/tags/0.37.0
 
  User-visible changes:
  * bugfix: buffer overflow for AIX client
@@ -1676,7 +1676,7 @@ http://svn.collab.net/repos/svn/tags/0.37.0
 
 Version 0.36.0 [Beta Interim 1]
 (branching 13 January 2004, from /branches/1.0-stabilization)
-http://svn.collab.net/repos/svn/tags/0.36.0
+http://svn.apache.org/repos/asf/subversion/tags/0.36.0
 
  User-visible changes:
  * add cancellation support to svnadmin and svnlook (r8222)
@@ -1712,7 +1712,7 @@ http://svn.collab.net/repos/svn/tags/0.36.0
 
 
 Version 0.35.1 [Beta] (branching 19 December 2003, from /tags/0.35.0)
-http://svn.collab.net/repos/svn/tags/0.35.1
+http://svn.apache.org/repos/asf/subversion/tags/0.35.1
 
                               NOTICES:
 
@@ -1724,7 +1724,7 @@ http://svn.collab.net/repos/svn/tags/0.35.1
 
 
 Version 0.35.0 (branching 12 December 2003, from revision 7994)
-http://svn.collab.net/repos/svn/branches/0.35.0
+http://svn.apache.org/repos/asf/subversion/branches/0.35.0
 
                               NOTICES:
 
@@ -1757,7 +1757,7 @@ http://svn.collab.net/repos/svn/branches/0.35.0
 
 
 Version 0.34.0 (released 3 December 2003, from revision r7859)
-http://svn.collab.net/repos/svn/tags/0.34.0
+http://svn.apache.org/repos/asf/subversion/tags/0.34.0
 
 #####################################################################
 ##  WARNING  WARNING  WARNING  WARNING  WARNING  WARNING  WARNING  ##
@@ -1779,7 +1779,7 @@ http://svn.collab.net/repos/svn/tags/0.34.0
  pre-0.34.0 repos to 0.34.0.
 
  That document is also located here:
-    http://svn.collab.net/repos/svn/trunk/notes/repos_upgrade_HOWTO
+    http://svn.apache.org/repos/asf/subversion/trunk/notes/repos_upgrade_HOWTO
 
  User-visible changes:
  * fs schema change (#1578, #1595) **NOTE: repos dump/load cycle required!**
@@ -1802,7 +1802,7 @@ http://svn.collab.net/repos/svn/tags/0.34.0
 
 
 Version 0.33.1 (released 17 November 2003, revision r7782)
-http://svn.collab.net/repos/svn/tags/0.33.1
+http://svn.apache.org/repos/asf/subversion/tags/0.33.1
 
     NOTICE: This is a bugfix release.  The bug is fixed if *either*
             the client or server uses the new code.
@@ -1812,7 +1812,7 @@ User-visible changes:
 
 
 Version 0.33.0 (released 13 November 2003, revision r7737)
-http://svn.collab.net/repos/svn/tags/0.33.0
+http://svn.apache.org/repos/asf/subversion/tags/0.33.0
 
                               NOTICES:
 
@@ -1863,7 +1863,7 @@ http://svn.collab.net/repos/svn/tags/0.33.0
 
 
 Version 0.32.1 (released 23 October 2003, revision 7497)
-http://svn.collab.net/repos/svn/tags/0.32.1
+http://svn.apache.org/repos/asf/subversion/tags/0.32.1
 
  NOTICE: This release is to correct for the problems in the 0.32.0
          release.  There are no user or developer changes in this release
@@ -1874,7 +1874,7 @@ http://svn.collab.net/repos/svn/tags/0.32.1
          compatibility break with Subversions older than 0.28.0.
 
 Version 0.32.0 (released 22 October 2003, revision 7480)
-http://svn.collab.net/repos/svn/tags/0.32.0
+http://svn.apache.org/repos/asf/subversion/tags/0.32.0
 
  NOTICE: This release of Subversion causes an ra_dav client/server
          compatibility break with Subversions older than 0.28.0.
@@ -1908,7 +1908,7 @@ http://svn.collab.net/repos/svn/tags/0.32.0
 
 
 Version 0.31.0 (released 08 October 2003, revision 7355)
-http://svn.collab.net/repos/svn/tags/0.31.0
+http://svn.apache.org/repos/asf/subversion/tags/0.31.0
 
  User-visible changes:
  * new 'svnlook history' command (and removal of 'svnadmin lscr').
@@ -1949,7 +1949,7 @@ http://svn.collab.net/repos/svn/tags/0.31.0
 
 
 Version 0.30.0 (released 24 Sep 2003, revision 7178)
-http://svn.collab.net/repos/svn/tags/0.30.0
+http://svn.apache.org/repos/asf/subversion/tags/0.30.0
 
  User-visible changes:
  * SSL changes:  (r7134, #1330)
@@ -1984,7 +1984,7 @@ http://svn.collab.net/repos/svn/tags/0.30.0
 
 
 Version 0.29.0 (released 05 Sep 2003, revision 6976)
-http://svn.collab.net/repos/svn/tags/0.29.0
+http://svn.apache.org/repos/asf/subversion/tags/0.29.0
 
  User-visible changes:
  * 'svn status' now streams its response.  (r6913, #1426)
@@ -2012,7 +2012,7 @@ http://svn.collab.net/repos/svn/tags/0.29.0
 
 
 Version 0.28.2 (released 29 Aug 2003, revision 6946)
-http://svn.collab.net/repos/svn/tags/0.28.2
+http://svn.apache.org/repos/asf/subversion/tags/0.28.2
 
  User-visible changes:
  * MAJOR BUGFIX:  revert revision 6764.
@@ -2026,7 +2026,7 @@ http://svn.collab.net/repos/svn/tags/0.28.2
 
 
 Version 0.28.1
-(released 28 Aug 2003,http://svn.collab.net/repos/svn/tags/0.28.1)
+(released 28 Aug 2003,http://svn.apache.org/repos/asf/subversion/tags/0.28.1)
 
   There are no changes in this release.
   It is strictly an updated release, build with the correct version
@@ -2034,7 +2034,7 @@ Version 0.28.1
 
 
 Version 0.28.0 (released 27 August 2003, rev 6894, branches/release-0.28)
-(http://svn.collab.net/repos/svn/tags/0.28)
+(http://svn.apache.org/repos/asf/subversion/tags/0.28)
 
 #####################################################################
 ##  WARNING  WARNING  WARNING  WARNING  WARNING  WARNING  WARNING  ##
@@ -2057,7 +2057,7 @@ Version 0.28.0 (released 27 August 2003, rev 6894, branches/release-0.28)
  pre-0.28.0 repos to 0.28.0.
 
  That document is also located here:
-    http://svn.collab.net/repos/svn/trunk/notes/repos_upgrade_HOWTO
+    http://svn.apache.org/repos/asf/subversion/trunk/notes/repos_upgrade_HOWTO
 
  User-visible changes:
  * fs schema change, see issue #1003 **NOTE: repos dump/load cycle required!**
@@ -2853,7 +2853,7 @@ Version 0.13.0 [Pre-Alpha] (released 10 June 2002, revision 2140)
  User-visible changes:
  * repositories have a new database schema;  existing ones must be upgraded!
     - new svnadmin 'dump'/'load' commands to migrate repositories
-    - read http://svn.collab.net/repos/svn/trunk/notes/repos_upgrade_HOWTO
+    - read http://svn.apache.org/repos/asf/subversion/trunk/notes/repos_upgrade_HOWTO
 
  Developer-visible changes:
  * complete rewrite of filesystem schema!
